# ash-wm

./: CMakeLists.txt  ipc.sh  makefile  readme.md
src/: config.h  ewmh.c  ewmh.h  func.h  icccm.c  icccm.h  main.c
